# data-sentinel

./: .dockerignore  .env.docker.example  .gitignore  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/application/dto/: auth_dto.py  common.py  dashboard_dto.py  etl_registry_dto.py  execution_dto.py  statistics_dto.py
apps/api/app/application/ports/: password_hasher.py  token_provider.py
apps/api/app/application/use_cases/: etl_scope.py  get_current_user_use_case.py  get_dashboard_use_case.py  get_execution_detail_use_case.py  get_statistics_use_case.py  list_executions_use_case.py  list_registered_etls_use_case.py  login_use_case.py  register_etl_table_use_case.py  set_etl_active_use_case.py
apps/api/app/application/validators/: etl_registration_validator.py  filter_validator.py  pagination_validator.py  sort_validator.py
apps/api/app/core/: errors.py  logging.py  settings.py
apps/api/app/domain/entities/: execution.py  registered_etl.py  user.py
apps/api/app/domain/repositories/: etl_registry_repository.py  execution_repository.py  queries.py  user_repository.py
apps/api/app/domain/services/: execution_identity.py
apps/api/app/domain/value_objects/: execution_status.py  (+2 more)
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_auth_use_cases.py  test_dashboard_statistics_use_cases.py  test_domain.py  test_etl_registry_use_cases.py  test_execution_use_cases.py  test_validators.py
(+89 files in other folders)
